<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.game.GameFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <GridLayout
                android:id="@+id/game_fragment_grid_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:columnCount="2"
                android:rowCount="3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/game_1_constraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/game1_button_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="100dp"
                        android:layout_marginTop="16dp"
                        android:background="@color/primary"
                        android:text="Adverbs"
                        android:textColor="@color/white"

                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/game_1_notifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/warning"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:translationZ="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/game1_button_id"
                        app:layout_constraintTop_toTopOf="@+id/game1_button_id" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/game_2_constraint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/game2_button_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="16dp"
                        android:background="@color/primary"
                        android:text="Alphabets"
                        android:textColor="@color/white"

                        android:visibility="visible"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/game_2_notifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/warning"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:translationZ="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/game2_button_id"
                        app:layout_constraintTop_toTopOf="@+id/game2_button_id" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/game_3_constraint"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/game3_button_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Attachments"
                        android:textColor="@color/white"

                        android:visibility="visible"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.49"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/game_3_notifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/warning"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:translationZ="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/game3_button_id"
                        app:layout_constraintTop_toTopOf="@+id/game3_button_id" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/game_4_constraint"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/game4_button_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Numbers"
                        android:textColor="@color/white"

                        android:visibility="visible"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/game_4_notifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/warning"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:translationZ="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/game4_button_id"
                        app:layout_constraintTop_toTopOf="@+id/game4_button_id" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout

                    android:id="@+id/game_5_constraint"
                    android:layout_rowWeight="1"
                    android:layout_columnWeight="1"
                    android:layout_gravity="fill">

                    <Button
                        android:id="@+id/game5_button_id"
                        android:layout_width="@dimen/grid_width"
                        android:layout_height="@dimen/grid_height"
                        android:layout_marginTop="20dp"
                        android:background="@color/primary"
                        android:text="Pronouns"
                        android:textColor="@color/white"

                        android:visibility="visible"
                        app:layout_constraintDimensionRatio="1:1"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/game_5_notifi"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="5dp"
                        android:background="@color/warning"
                        android:paddingLeft="10dp"
                        android:paddingTop="5dp"
                        android:paddingRight="10dp"
                        android:paddingBottom="5dp"
                        android:text="1"
                        android:textColor="@color/white"
                        android:translationZ="10sp"
                        app:layout_constraintEnd_toEndOf="@+id/game5_button_id"
                        app:layout_constraintTop_toTopOf="@+id/game5_button_id" />
                </androidx.constraintlayout.widget.ConstraintLayout>


            </GridLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>


