<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_secondary"

    >

    <RelativeLayout
        android:layout_width="match_parent"

        android:layout_height="wrap_content"
        android:padding="16dp">


        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@null"


            android:hapticFeedbackEnabled="false"
            app:srcCompat="@drawable/abc_vector_test" />

        <TextView
            android:id="@+id/screen_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="45dp"
            android:text="Screen Title"
            android:textColor="@color/white"
            android:textSize="18sp">

        </TextView>

        <TextView
            android:id="@+id/sub_screen_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"

            android:textColor="@color/selected_or_secondary"
            android:textSize="18sp" />


    </RelativeLayout>
</RelativeLayout>