...
        android:textColor="@color/white"
        android:textSize="36sp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.563"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageQuestion" />

    <ImageView
        android:id="@+id/timer_image"
        android:layout_width="38dp"
        android:layout_height="52dp"
        android:layout_marginTop="24dp"
...
